--- a/style.css
+++ b/style.css
@@ -21,12 +21,21 @@ header {
     max-width: 1920px;
     width: 100%;
     height: 200px;
+    display: flex;
+    justify-content: right;
 }
 
 header img {
     width: 100.03px;
     height: 121.97px;
-    padding-top: 80px;
+    margin-top: 80px;
+    padding-left: 77px;
+}
+
+.joinIcon img {
+    width: 100.03px;
+    height: 121.97px;
+    margin-top: 80px;
     padding-left: 77px;
 }
 
@@ -35,6 +44,7 @@ main {
     width: 100%;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
 footer {
